# esp-guitar-assistant

./: README.md
src/: CMakeLists.txt  sdkconfig
src/main/: CMakeLists.txt  chord.c  chord.h  idf_component.yml  main.c  note.c  note.h  server.c  server.h  tuning.c  tuning.h
src/spiffs/: chord.css  chord.html  chord.js  chords.js  fretboard.css  home.css  index.html  metronome.css  metronome.html  metronome.js  nav.html  scale.html  scale.js  style.css  tuner.css  tuner.html  tuner.js
